k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phoenixtrader
  labels:
    app.kubernetes.io/part-of: phoenixtrader
